# 42-Projects

./: .gitignore  README.md  myexamprintf.c  pingmatrix.sh  quadragoose.sh
FDF/: CMakeLists.txt  Makefile  a.out  checkerleaks.sh  fdf  fdf.c  fdf.h  fdf_utils.c  keys.c  keys.h  keys_utils.c  leaks.txt  lines.c  liveleaks.txt  matrices.c  result.txt  test.c  tip.txt  varleaks.txt
FDF/get_next_line/: get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils_bonus.c
FDF/libft/: Makefile  ft_split.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  libft.h
FDF/test_maps/: 10-2.fdf  42.fdf  421.fdf  mars.fdf  pentenegpos.fdf
fizzbuzz/: fizzbuzz.c  rotone.c
ft_printf/: CMakeLists.txt  Makefile  ft_printf.c  ft_printf.h  ft_putnbr_base_ret.c  main.c
ft_printf/libft/: Makefile  ft_putchar_ret.c  ft_putnbr_ret.c  ft_putstr_ret.c  libft.h
get_next_line/: CMakeLists.txt  a.out  get_next_line.c  test.txt  test2.txt
libft/: CMakeLists.txt  Makefile  libft.h
minitalk/: .gitignore  Makefile  binaryconverter.c  client  client.c  client_bonus.c  minitalk.h  minitalk_bonus.h  server  server.c  server_bonus.c
minitalk/libft/: Makefile  ft_chrjoinfree.c  ft_itoa.c  ft_putchar.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_strlen.c  libft.h  libftminitalk.h-4bda1669.gch.tmp  (+1 more)
philosophers/: Makefile  amanuensis.c  anihiliation.c  chronos.c  dayAndNight.c  main.c  main2.c  nursery.c  philo.h  philo2.h  test1.txt  test2.txt
pushswap/: .gitignore  Makefile  RES  leaksviewer.sh  op_utils.c  push_swap  pushswap.h  radix.c  rotatenreverse.c  sort.c  swapush.c  test.c  utils.c
(+14 files in other folders)
